--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"@smui/textfield": "^6.0.0-beta.16",
 		"@smui/top-app-bar": "^6.0.0-beta.16",
 		"@sveltejs/adapter-auto": "next",
+		"@sveltejs/adapter-netlify": "^1.0.0-next.58",
 		"@sveltejs/kit": "next",
 		"autoprefixer": "^10.4.7",
 		"eslint": "^7.32.0",
